src/app/page.module.css
.Landing {
    display: flex;
    flex-direction: column;
}
.Landing a {
    color: var(--accent);
    text-decoration: underline;
}

.Row {
    padding: 0px 5%;
    display: flex;
    justify-content: center;
}

.Head {
    margin-bottom: 32px;
    font-size: 200px;
    color: var(--accent);
    min-height: 40vh;
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    justify-content: center;
}

a.Logo {
    font-family: "King Malik";
    color: inherit;
    text-decoration: none;
    display: flex;
    justify-content: center;
    margin-bottom: 32px;
}

.Launch {
    align-self: center;
    text-align: center;
    border: 1px solid var(--line-color);
    border-radius: 16px;
    padding: 16px 32px;
    font-size: 24px;
    text-decoration: none !important;
    margin-bottom: 32px;
    min-width: 25%;
    box-sizing: border-box;
    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
}
.Launch:hover {
    background-color: var(--background);
    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.7);
}

.Features {
    display: flex;
    justify-content: space-between;
    padding: 0px 5%;
}

.Feature {
    border: 1px solid var(--accent);
    border-radius: 16px;
    padding: 16px;
    min-width: 25%;
    box-sizing: border-box;
    line-height: 2em;
}
.Feature h3 {
    font-weight: normal;
    font-size: 32px;
    text-align: center;
    margin: 0 0 1em 0;
}

.Start {
    padding: 20px 5%;
}

.Start i {
    /* font-family: serif; */
}

.Start h1 {
    font-size: 48px;
    font-weight: normal;
    margin-bottom: 16px;
    margin-top: 48px;
}

.Start img {
    max-width: 100%;
    border: 1px solid var(--line-color);
    border-radius: 8px;
    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.5);
}

